subdir('parser')

cchell_source = files('diagnostics.cc',
                      'input.cc',
                      'interaction.cc',
                      'interpreter.cc',
                      'lexer.cc',
                      'main.cc',
                      'parser.cc',
                      'shared.cc',
                     ) + cchell_parser_source