subdir('input')
subdir('parser')

cchell_source = files('diagnostics.cc',
                      'interaction.cc',
                      'interpreter.cc',
                      'lexer.cc',
                      'main.cc',
                      'parser.cc',
                      'shared.cc',
                      'terminal.cc',
                     ) + cchell_input_source + cchell_parser_source